--- a/src/styles.css
+++ b/src/styles.css
@@ -8,21 +8,20 @@ button {
 
 }
 .content {
-
-}
-.tabs-wrapper {
   height: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: center;
 }
+.tabs-wrapper {
+  width: 70%;
+  margin-top: 100px;
+}
 .tabs {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   grid-auto-rows: minmax(120px, auto);
-  width: 70%;
   grid-gap: 10px;
-  margin-top: 100px;
 }
 .tabs__item {
   display: flex;
@@ -110,4 +109,17 @@ button {
   color: #017ac3;
   transition: color .3s;
   cursor: pointer;
+}
+.tabs__back-btn {
+  background-color: #e2e2e2;
+  padding: 12px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  transition: opacity 0.3s ease-in-out;
+  width: 100%;
+  height: 48px;
+}
+.tabs__back-btn[disabled] {
+  background-color: #f4f3f3;
+  opacity: .3;
 }
